syntax = "proto3";

package aleapb.bcpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/aleapb/bcpb";

import "aleapb/common/common.proto";
import "requestpb/requestpb.proto";

import "mir/codegen_extensions.proto";


// ============================================================
// Events
// ============================================================

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    StartBroadcast start_broadcast = 1;
    Deliver        deliver         = 2;
    FreeSlot       free_slot       = 3;
  }
}

message StartBroadcast {
  option (mir.event) = true;

  // queue_idx is the one for this node
  uint64                     queue_slot = 1 [(mir.type) = "github.com/filecoin-project/mir/pkg/alea/aleatypes.QueueSlot"];
  repeated bytes             tx_ids     = 2 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.TxID"];
  repeated requestpb.Request txs        = 3;
}


message Deliver {
  option (mir.event) = true;

  common.Slot slot = 1;
}

message FreeSlot {
  option (mir.event) = true;

  common.Slot slot = 1;
}

message StoreBatchOrigin {
  option (mir.struct) = true;

  common.Slot slot = 1;
}
